# GEN_AI

./: .gitignore
Langchain_learing/: RAG.ipynb  chain.ipynb  testing_firebase.ipynb
Langgraph_academy/module_0/: basics.ipynb
Langgraph_academy/module_1/: 01_conditional_edge.ipynb  2.1_tools_messages.ipynb  2.2_chains_reducers.ipynb  3_router.ipynb  4_agent.ipynb
Langgraph_academy/module_2/: 1_state_schema.ipynb  2_state_reducers.ipynb  3_multiple_schemas.ipynb  4_trim_filter_messages.ipynb  6.0_chatbot_external_memory_with_sqlite.ipynb
Langgraph_academy/module_3/: 2_breakpoints.ipynb  3_edit_state_human_feedback.ipynb  4_dynamic_breakpoints.ipynb
Langgraph_academy/module_4/: 1_parallelization.ipynb  3_map_reduce.ipynb
Langgraph_academy_panaversity/module_0/: LangGraph_lec_1.ipynb
Langgraph_academy_panaversity/module_1/: 00_edges_nodes_graph.ipynb  5_agent_memory.ipynb
Langgraph_academy_panaversity/module_2/: 5_chatbot_summarization.ipynb  6.1_chatbot_external_memory_with_our_db_file.ipynb  6.2_chatbot_external_memory_with_postgres.ipynb
Langgraph_academy_panaversity/module_3/: 1_streaming_interruption.ipynb  5_time_travel.ipynb  understand_steaming.ipynb
Langgraph_academy_panaversity/module_4/: 0.1_HIL_interrupt.ipynb
Langgraph_academy_panaversity/module_5/: 01_memory_store.ipynb
Projects/Text_Analysis/: text_analysis.ipynb
Projects/ai_news/: README.md  app.py  graph.py  (+3 more)
chainlit_test/: pyproject.toml
chainlit_test/src/: hello.py
chainlit_test/src/chainlit_test/: __init__.py
langgraph_notebook_examples/: 06_chatbot-summarization.ipynb
(+26 files in other folders)
