[project]
name = "chainlit-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Talib Daryabi", email = "talibdaryabi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.4.302",
    "openai-agents>=0.0.7",
]

[project.scripts]
chainlit-test = "chainlit_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
